--- a/chat.html
+++ b/chat.html
@@ -15,7 +15,6 @@
       height: 100vh;
       margin: 0;
     }
-
     .chat-container {
       width: 400px;
       height: 550px;
@@ -27,7 +26,6 @@
       box-shadow: 0 0 15px rgba(255,255,255,0.2);
       position: relative;
     }
-
     .chat-header {
       background: rgba(255,255,255,0.15);
       padding: 12px;
@@ -37,7 +35,6 @@
       border-bottom: 1px solid rgba(255,255,255,0.2);
       position: relative;
     }
-
     .back-home {
       position: absolute;
       left: 15px;
@@ -51,10 +48,7 @@
       font-size: 14px;
       transition: background 0.3s ease;
     }
-    .back-home:hover {
-      background: #1e40af;
-    }
-
+    .back-home:hover { background: #1e40af; }
     .chat-box {
       flex: 1;
       padding: 15px;
@@ -64,7 +58,6 @@
       gap: 8px;
       scroll-behavior: smooth;
     }
-
     .message {
       background: rgba(255,255,255,0.2);
       padding: 10px 15px;
@@ -72,17 +65,8 @@
       align-self: flex-start;
       max-width: 75%;
     }
-
-    .me {
-      align-self: flex-end;
-      background: #2563eb;
-    }
-
-    .input-area {
-      display: flex;
-      border-top: 1px solid rgba(255,255,255,0.2);
-    }
-
+    .me { align-self: flex-end; background: #2563eb; }
+    .input-area { display: flex; border-top: 1px solid rgba(255,255,255,0.2); }
     input {
       flex: 1;
       padding: 10px;
@@ -90,11 +74,7 @@
       background: rgba(255,255,255,0.1);
       color: white;
     }
-
-    input::placeholder {
-      color: rgba(255,255,255,0.7);
-    }
-
+    input::placeholder { color: rgba(255,255,255,0.7); }
     button {
       padding: 10px 15px;
       background: #2563eb;
@@ -103,10 +83,7 @@
       cursor: pointer;
       transition: 0.3s;
     }
-
-    button:hover {
-      background: #1e40af;
-    }
+    button:hover { background: #1e40af; }
   </style>
 </head>
 <body>
@@ -122,54 +99,48 @@
     </div>
   </div>
 
-  <!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js"></script>
-<script>
-    // 🔥 Replace this config with YOUR Firebase Web App config
-   const firebaseConfig = {
-    apiKey: "AIzaSyAskWD9sQ_M4eYbqDg5rZHScTfA8Pqg0Ro",
-    authDomain: "sanatmal-portfolio-chat.firebaseapp.com",
-    databaseURL: "https://sanatmal-portfolio-chat-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "sanatmal-portfolio-chat",
-    storageBucket: "sanatmal-portfolio-chat.firebasestorage.app",
-    messagingSenderId: "83984290047",
-    appId: "1:83984290047:web:d7091264d0875c7a6afcca",
-    measurementId: "G-PJNV0KQGSH"
-  };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+  <!-- Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.24.0/dist/supabase.min.js"></script>
+  <script>
+    // 🔥 Replace with your Supabase Project URL & anon key
+    const SUPABASE_URL = "YOUR_SUPABASE_URL";
+    const SUPABASE_KEY = "YOUR_SUPABASE_ANON_KEY";
+    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     const chatBox = document.getElementById('chatBox');
     const msgInput = document.getElementById('msgInput');
     const sendBtn = document.getElementById('sendBtn');
 
     // Send message
-    sendBtn.addEventListener('click', () => {
-    const text = msgInput.value.trim();
-    if(text) {
-      const msgRef = db.ref('messages').push();
-      msgRef.set({
-        text: text,
-        time: Date.now()
-      }).then(() => {
-        msgInput.value = ''; // clear input after sending
-      }).catch(err => console.error(err));
-    }
-  });
+    sendBtn.addEventListener('click', async () => {
+      const text = msgInput.value.trim();
+      if (!text) return;
+      await supabase.from('messages').insert([{ text, created_at: new Date() }]);
+      msgInput.value = '';
+    });
 
-    // Listen for new messages
-    db.ref('messages').on('child_added', (snapshot) => {
-    const msg = snapshot.val();
-    const div = document.createElement('div');
-    div.className = 'message';
-    div.textContent = msg.text;
-    chatBox.appendChild(div);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  });
+    // Fetch existing messages
+    async function loadMessages() {
+      const { data } = await supabase.from('messages').select('*').order('created_at', { ascending: true });
+      data.forEach(msg => {
+        const div = document.createElement('div');
+        div.className = 'message';
+        div.textContent = msg.text;
+        chatBox.appendChild(div);
+      });
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+    loadMessages();
+
+    // Real-time subscription
+    supabase.from('messages').on('INSERT', payload => {
+      const msg = payload.new;
+      const div = document.createElement('div');
+      div.className = 'message';
+      div.textContent = msg.text;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }).subscribe();
   </script>
 </body>
 </html>
-
