--- a/chat.html
+++ b/chat.html
@@ -103,8 +103,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.24.0/dist/supabase.min.js"></script>
   <script>
     // 🔥 Replace with your Supabase Project URL & anon key
-    const SUPABASE_URL = "YOUR_SUPABASE_URL";
-    const SUPABASE_KEY = "YOUR_SUPABASE_ANON_KEY";
+    const SUPABASE_URL = "https://wcmnbilscntlsycqgrip.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndjbW5iaWxzY250bHN5Y3FncmlwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NzE1MjQsImV4cCI6MjA3ODU0NzUyNH0.4stQ_YHraJ2PwU4z7YGh_aOjGLEJ3wMRO5sb6q9iziY";
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     const chatBox = document.getElementById('chatBox');
@@ -144,3 +144,4 @@
   </script>
 </body>
 </html>
+
