--- a/chat.html
+++ b/chat.html
@@ -101,47 +101,71 @@
 
   <!-- Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.24.0/dist/supabase.min.js"></script>
-  <script>
-    // 🔥 Replace with your Supabase Project URL & anon key
-    const SUPABASE_URL = "https://wcmnbilscntlsycqgrip.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndjbW5iaWxzY250bHN5Y3FncmlwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NzE1MjQsImV4cCI6MjA3ODU0NzUyNH0.4stQ_YHraJ2PwU4z7YGh_aOjGLEJ3wMRO5sb6q9iziY";
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+<script>
+  // 🔥 Replace with your Supabase Project URL & anon key
+  const SUPABASE_URL = "https://wcmnbilscntlsycqgrip.supabase.co"; 
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndjbW5iaWxzY250bHN5Y3FncmlwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NzE1MjQsImV4cCI6MjA3ODU0NzUyNH0.4stQ_YHraJ2PwU4z7YGh_aOjGLEJ3wMRO5sb6q9iziY"; 
 
-    const chatBox = document.getElementById('chatBox');
-    const msgInput = document.getElementById('msgInput');
-    const sendBtn = document.getElementById('sendBtn');
+  // Initialize client
+  const client = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    // Send message
-    sendBtn.addEventListener('click', async () => {
-      const text = msgInput.value.trim();
-      if (!text) return;
-      await supabase.from('messages').insert([{ text, created_at: new Date() }]);
+  const chatBox = document.getElementById('chatBox');
+  const msgInput = document.getElementById('msgInput');
+  const sendBtn = document.getElementById('sendBtn');
+
+  // Send message
+  sendBtn.addEventListener('click', async () => {
+    const text = msgInput.value.trim();
+    if (!text) return;
+
+    const { data, error } = await client
+      .from('messages')
+      .insert([{ text, created_at: new Date() }]);
+
+    if (error) {
+      console.error("Error sending message:", error.message);
+    } else {
       msgInput.value = '';
-    });
-
-    // Fetch existing messages
-    async function loadMessages() {
-      const { data } = await supabase.from('messages').select('*').order('created_at', { ascending: true });
-      data.forEach(msg => {
-        const div = document.createElement('div');
-        div.className = 'message';
-        div.textContent = msg.text;
-        chatBox.appendChild(div);
-      });
-      chatBox.scrollTop = chatBox.scrollHeight;
     }
-    loadMessages();
+  });
 
-    // Real-time subscription
-    supabase.from('messages').on('INSERT', payload => {
+  // Load existing messages
+  async function loadMessages() {
+    const { data, error } = await client
+      .from('messages')
+      .select('*')
+      .order('created_at', { ascending: true });
+
+    if (error) {
+      console.error("Error loading messages:", error.message);
+      return;
+    }
+
+    data.forEach(msg => {
+      const div = document.createElement('div');
+      div.className = 'message';
+      div.textContent = msg.text;
+      chatBox.appendChild(div);
+    });
+    chatBox.scrollTop = chatBox.scrollHeight;
+  }
+  loadMessages();
+
+  // Real-time subscription
+  client
+    .channel('public:messages')
+    .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
       const msg = payload.new;
       const div = document.createElement('div');
       div.className = 'message';
       div.textContent = msg.text;
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
-    }).subscribe();
-  </script>
+    })
+    .subscribe();
+</script>
+
 </body>
 </html>
+
 
