--- a/chat.html
+++ b/chat.html
@@ -1,71 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sanat Chat</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat with Sanat</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f9; }
-    #chatBox {
-      border: 1px solid #ccc; background: #fff;
-      height: 400px; overflow-y: auto; padding: 10px;
-      border-radius: 10px; margin-bottom: 10px;
+    body {
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: #f5f7fb;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
     }
-    .message { padding: 5px 10px; margin: 5px 0; background: #e9f5ff; border-radius: 8px; }
-    #msgInput { width: 80%; padding: 10px; border-radius: 8px; border: 1px solid #ccc; }
-    #sendBtn { padding: 10px 20px; border: none; border-radius: 8px; background: #007bff; color: #fff; cursor: pointer; }
-    #sendBtn:hover { background: #0056b3; }
+    #chatBox {
+      width: 90%;
+      max-width: 600px;
+      height: 400px;
+      background: #fff;
+      border-radius: 12px;
+      border: 1px solid #ddd;
+      overflow-y: auto;
+      padding: 10px;
+      margin-bottom: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+    .message {
+      background: #e8f3ff;
+      padding: 8px 12px;
+      margin: 6px 0;
+      border-radius: 10px;
+    }
+    .input-row {
+      display: flex;
+      width: 90%;
+      max-width: 600px;
+      gap: 10px;
+    }
+    #msgInput {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    #sendBtn {
+      background: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    #sendBtn:hover {
+      background: #0056b3;
+    }
   </style>
 </head>
 <body>
   <h2>💬 Chat with Sanat</h2>
   <div id="chatBox"></div>
-  <input type="text" id="msgInput" placeholder="Type your message...">
-  <button id="sendBtn">Send</button>
+  <div class="input-row">
+    <input id="msgInput" type="text" placeholder="Type a message..." />
+    <button id="sendBtn">Send</button>
+  </div>
 
-  <!-- ✅ Load Supabase first -->
+  <!-- ✅ 1. Load Supabase correctly -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 
-  <!-- ✅ Then your chat script -->
+  <!-- ✅ 2. Then your script -->
   <script>
+    // 🔥 Replace with your Supabase credentials
     const SUPABASE_URL = "https://wcmnbilscntlsycqgrip.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndjbW5iaWxzY250bHN5Y3FncmlwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NzE1MjQsImV4cCI6MjA3ODU0NzUyNH0.4stQ_YHraJ2PwU4z7YGh_aOjGLEJ3wMRO5sb6q9iziY";
 
+    // ✅ This must reference window.supabase
     const client = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    const chatBox = document.getElementById('chatBox');
-    const msgInput = document.getElementById('msgInput');
-    const sendBtn = document.getElementById('sendBtn');
-
-    sendBtn.addEventListener('click', async () => {
-      const text = msgInput.value.trim();
-      if (!text) return;
-      await client.from('messages').insert([{ text, created_at: new Date() }]);
-      msgInput.value = '';
-    });
+    const chatBox = document.getElementById("chatBox");
+    const msgInput = document.getElementById("msgInput");
+    const sendBtn = document.getElementById("sendBtn");
 
     async function loadMessages() {
-      const { data } = await client.from('messages').select('*').order('created_at', { ascending: true });
-      data.forEach(msg => {
-        const div = document.createElement('div');
-        div.className = 'message';
-        div.textContent = msg.text;
+      const { data, error } = await client
+        .from("messages")
+        .select("*")
+        .order("created_at", { ascending: true });
+      if (error) return console.error(error);
+      chatBox.innerHTML = "";
+      data.forEach((m) => {
+        const div = document.createElement("div");
+        div.className = "message";
+        div.textContent = m.text;
         chatBox.appendChild(div);
       });
+      chatBox.scrollTop = chatBox.scrollHeight;
     }
-    loadMessages();
 
-    client.channel('public:messages').on(
-      'postgres_changes',
-      { event: 'INSERT', schema: 'public', table: 'messages' },
-      payload => {
-        const msg = payload.new;
-        const div = document.createElement('div');
-        div.className = 'message';
-        div.textContent = msg.text;
-        chatBox.appendChild(div);
-      }
-    ).subscribe();
+    sendBtn.addEventListener("click", async () => {
+      const text = msgInput.value.trim();
+      if (!text) return;
+      const { error } = await client.from("messages").insert([{ text }]);
+      if (error) console.error(error);
+      msgInput.value = "";
+    });
+
+    client
+      .channel("public:messages")
+      .on(
+        "postgres_changes",
+        { event: "INSERT", schema: "public", table: "messages" },
+        (payload) => {
+          const msg = payload.new;
+          const div = document.createElement("div");
+          div.className = "message";
+          div.textContent = msg.text;
+          chatBox.appendChild(div);
+          chatBox.scrollTop = chatBox.scrollHeight;
+        }
+      )
+      .subscribe();
+
+    loadMessages();
   </script>
 </body>
 </html>
