--- a/chat.html
+++ b/chat.html
@@ -7,11 +7,18 @@
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
-      background: #f5f7fb;
+      background: linear-gradient(135deg, #f0f4ff, #dfe9ff);
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 20px;
+      min-height: 100vh;
+    }
+    h2 {
+      color: #222;
+      margin-bottom: 20px;
+      font-weight: 600;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
     #chatBox {
       width: 90%;
@@ -23,13 +30,18 @@
       overflow-y: auto;
       padding: 10px;
       margin-bottom: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
     }
     .message {
       background: #e8f3ff;
       padding: 8px 12px;
       margin: 6px 0;
       border-radius: 10px;
+      animation: fadeIn 0.3s ease;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(5px); }
+      to { opacity: 1; transform: translateY(0); }
     }
     .input-row {
       display: flex;
@@ -42,6 +54,7 @@
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 8px;
+      font-size: 15px;
     }
     #sendBtn {
       background: #007bff;
@@ -50,9 +63,20 @@
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
+      font-size: 15px;
+      transition: 0.2s;
     }
     #sendBtn:hover {
       background: #0056b3;
+    }
+    .back-home {
+      margin-top: 15px;
+      text-decoration: none;
+      color: #007bff;
+      font-weight: 500;
+    }
+    .back-home:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -63,29 +87,32 @@
     <input id="msgInput" type="text" placeholder="Type a message..." />
     <button id="sendBtn">Send</button>
   </div>
+  <a href="index.html" class="back-home">← Back to Home</a>
 
-  <!-- ✅ 1. Load Supabase correctly -->
+  <!-- ✅ 1. Load Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 
-  <!-- ✅ 2. Then your script -->
+  <!-- ✅ 2. Chat Script -->
   <script>
-    // 🔥 Replace with your Supabase credentials
+    // 🔥 Replace these with your Supabase credentials
     const SUPABASE_URL = "https://wcmnbilscntlsycqgrip.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndjbW5iaWxzY250bHN5Y3FncmlwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NzE1MjQsImV4cCI6MjA3ODU0NzUyNH0.4stQ_YHraJ2PwU4z7YGh_aOjGLEJ3wMRO5sb6q9iziY";
 
-    // ✅ This must reference window.supabase
+    // ✅ Initialize Supabase
     const client = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     const chatBox = document.getElementById("chatBox");
     const msgInput = document.getElementById("msgInput");
     const sendBtn = document.getElementById("sendBtn");
 
+    // 📩 Load messages
     async function loadMessages() {
       const { data, error } = await client
         .from("messages")
         .select("*")
         .order("created_at", { ascending: true });
       if (error) return console.error(error);
+
       chatBox.innerHTML = "";
       data.forEach((m) => {
         const div = document.createElement("div");
@@ -95,17 +122,30 @@
       });
       chatBox.scrollTop = chatBox.scrollHeight;
     }
+    loadMessages();
 
+    // 📨 Send message
     sendBtn.addEventListener("click", async () => {
       const text = msgInput.value.trim();
       if (!text) return;
+
+      // Show message instantly (local echo)
+      const div = document.createElement("div");
+      div.className = "message";
+      div.textContent = text;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
+
+      // Send to Supabase
       const { error } = await client.from("messages").insert([{ text }]);
-      if (error) console.error(error);
+      if (error) console.error("Error inserting:", error);
+
       msgInput.value = "";
     });
 
-    client
-      .channel("public:messages")
+    // 💡 Real-time listener
+    const channel = client
+      .channel("chat-room")
       .on(
         "postgres_changes",
         { event: "INSERT", schema: "public", table: "messages" },
@@ -118,9 +158,11 @@
           chatBox.scrollTop = chatBox.scrollHeight;
         }
       )
-      .subscribe();
-
-    loadMessages();
+      .subscribe((status) => {
+        if (status === "SUBSCRIBED") {
+          console.log("✅ Real-time chat connected");
+        }
+      });
   </script>
 </body>
 </html>
