--- a/chat.html
+++ b/chat.html
@@ -85,6 +85,13 @@ sendBtn.onclick = async () => {
   msgInput.value = "";
 };
 
+  msgInput.addEventListener("keypress", (e) => {
+  if (e.key === "Enter") {
+    e.preventDefault();
+    sendBtn.click();
+  }
+});
+
 // Real-time listener for this user
 client.channel("chat-" + userId)
   .on("postgres_changes", { event: "INSERT", schema: "public", table: "messages", filter: `user_id=eq.${userId}` },
@@ -98,3 +105,4 @@ loadMessages();
 </script>
 </body>
 </html>
+
